// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rest directive Connection timeout from upstream 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: network timeout at: http://localhost:1111/hello],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Rest directive Empty response body 1`] = `
Object {
  "data": Object {
    "hello": "",
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Rest directive Error 401 from upstream 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: 401: Unauthorized],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Rest directive Error 404 from upstream (not nullable return type) 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: 404: Not Found],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Rest directive Error 404 from upstream (notFoundAsNull is false) 1`] = `
Object {
  "data": Object {
    "hello": null,
  },
  "errors": Array [
    [GraphQLError: 404: Not Found],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Rest directive Error 404 from upstream (notFoundAsNull is true) 1`] = `
Object {
  "data": Object {
    "hello": null,
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Rest directive Error 404 from upstream (nullable return type) 1`] = `
Object {
  "data": Object {
    "hello": null,
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Rest directive Error 500 from upstream 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: 500: Internal Server Error],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Rest directive GET with query params 1`] = `
Object {
  "data": Object {
    "hello": "miriam!",
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Rest directive Mutation 1`] = `
Object {
  "data": Object {
    "hello": "world",
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Rest directive POST with body from custom query argument 1`] = `
Object {
  "data": Object {
    "hello": "world",
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Rest directive POST with body from input query argument 1`] = `
Object {
  "data": Object {
    "hello": "world",
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Rest directive POST with predefined body 1`] = `
Object {
  "data": Object {
    "hello": "world",
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Rest directive Response timeout from upstream 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: network timeout at: http://localhost:1111/hello],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Rest directive Simple GET 1`] = `
Object {
  "data": Object {
    "hello": "world",
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
